# IRC

./: CMakeLists.txt  Makefile  client  irc.h  server
client_src/: client.c  cmd_join.c  cmd_leave.c  cmd_nick.c  cmd_privmsg.c  cmd_who.c  connect.c  data_transfer.c  exwraper.c  ft_receve_data.c  ft_recponce.c  ft_search_builtin.c  input_handler.c  ipv.c  irc_client.h  join.c  nick.c  setup.c  suport.c  support.c
libft/: ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strsub.c  get_next_line.c  libft.h
server_src/: client.c  cmd_join.c  cmd_names.c  cmd_nick.c  cmd_part.c  cmd_privmsg.c  exwraper.c  ipv.c  irc_server.h  main_loop.c  receve.c  responce.c  rpl_namrply.c  server.c  setup.c  support.c
src/: check_channle_name.c  check_nick.c  get_cmd.c  ipv.c  split_cmd.c
